--- a/src/main/resources/templates/funding/funding-detail.html
+++ b/src/main/resources/templates/funding/funding-detail.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/static/css/font/font.css">
     <link rel="stylesheet" href="/static/css/funding/funding-detail.css">
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
