메인 퍼블리싱 수정 완료 (심청이랭킹, 인기펀딩)

--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -1364,6 +1364,7 @@ b, strong {
     .main-content-style-container .sbs{
         width: 1160px;
         max-width: 1160px;
+        padding-bottom: 40px;
     }
 
     .container-component {
