--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -402,6 +402,8 @@ const $infoInputs = $('.accountWrap input[type=text]');
 let infoCheck;
 let infoCheckAll = [true, false, true, false];
 
+console.log($infoInputs);
+
 $infoInputs.on('blur', function () {
     let i = $infoInputs.index($(this));
     let value = $(this).val();
