--- a/src/main/resources/templates/funding/funding-gift.html
+++ b/src/main/resources/templates/funding/funding-gift.html
@@ -113,7 +113,7 @@
                             </button>
                         </a>
                         </div>
-                        <div>
+                        <!-- <div>
                             <a class="ideaButton">
                                 <div name="lightbulb-line" class="iconSVG">
                                     <svg viewBox="0 0 48 48">
@@ -125,7 +125,7 @@
                                 </div>
                                 <p type="l3" color="#3d3d3d" class="Text-sc-1cqgvse-0 giftIdea jOdkVg">선물 아이디어</p>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
