--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -32,6 +32,16 @@
         }
 
     }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    }
+    .checkBorder{
+        border: 1px solid rgb(244, 69, 68);
+    }
+    .checkLength{
+        color: rgb(244, 69, 68);
+    }
 </style>
 
 <body>
@@ -114,7 +124,7 @@
                                 아이템
                             </button>
                         </div>
-                        <div>
+                        <!-- <div>
                             <a class="ideaButton">
                                 <div name="lightbulb-line" class="iconSVG">
                                     <svg viewBox="0 0 48 48">
@@ -126,7 +136,7 @@
                                 </div>
                                 <p type="l3" color="#3d3d3d" class="giftIdea">선물 아이디어</p>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -347,7 +357,7 @@
                                             class="selectWithSigle msgStyle">
                                         </div>
                                         <ul class="selectItem">
-                                            <li>
+                                            <li style="display: none;">
                                                 <section>
                                                     <div class="itemInfoWrap">
                                                         <div type="l2" class="itemDescription">ㅇㄴㅁㄹㄴㅁㄻㄴㄹㄴㅁ</div>
@@ -364,15 +374,15 @@
                                                 </div>
                                                 <div>
                                                     <div class="stepperWrapper">
-                                                        <button type="button" disabled="">
+                                                        <button type="button" class="downButton" disabled="disabled">
                                                             <div name="minus" class="iconSVG">
                                                                 <svg viewBox="0 0 48 48">
                                                                     <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path>
                                                                 </svg>
                                                             </div>
                                                         </button>
-                                                        <input type="number" value="1">
-                                                        <button type="button">
+                                                        <input type="number" value="1" class = "test">
+                                                        <button type="button" class="upButton">
                                                             <div name="plus" class="iconSVG">
                                                                 <svg viewBox="0 0 48 48">
                                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M43.7104 21.8549H25.99V4.09524C25.99 2.89796 24.9945 2 23.9005 2C22.8054 2 21.81 2.89796 21.81 4.09524V21.9546H4.0905C2.89593 21.8549 2 22.8526 2 23.9501C2 25.0476 2.89593 26.0454 4.0905 26.0454H21.9095V43.9048C21.9095 45.0023 22.8054 46 23.999 46C25.095 46 26.0905 45.102 26.0905 43.9048V26.0454H43.9085C45.0045 26.0454 46 25.1474 46 23.9501C45.8009 22.8526 44.904 21.8549 43.7104 21.8549C43.7104 21.8549 43.81 21.8549 43.7104 21.8549Z">
@@ -387,11 +397,11 @@
                                                     </button>
                                                 </div>
                                             </section>
-                                            <ul class="item-Option">
+                                            <ul class="item-Option" >
                                                 <li>ㅁㅇㄴㄹㅇㅁㄴㄹㅇㄴㅁㄹ</li>
                                             </ul>
                                         </li>
-                                        <li>
+                                        <li style="display: none;" >
                                             <section>
                                                 <div class="itemInfoWrap">
                                                     <div type="l2" class="itemDescription">이게 상품이야</div>
@@ -410,9 +420,59 @@
                                                 </div>
                                                 <div>
                                                     <div class="stepperWrapper">
-                                                        <button type="button" disabled="">
-                                                            <div name="minus" class="iconSVG"><svg viewBox="0 0 48 48">
-                                                                <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path></svg></div></button><input type="number" value="1"><button type="button"><div name="plus" class="iconSVG">
+                                                        <button type="button" class="downButton" disabled="disabled">
+                                                            <div name="minus" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </button>
+                                                    <input type="number" value="1" class="test">
+                                                    <button type="button" class="upButton">
+                                                        <div name="plus" class="iconSVG">
+                                                                    <svg viewBox="0 0 48 48">
+                                                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M43.7104 21.8549H25.99V4.09524C25.99 2.89796 24.9945 2 23.9005 2C22.8054 2 21.81 2.89796 21.81 4.09524V21.9546H4.0905C2.89593 21.8549 2 22.8526 2 23.9501C2 25.0476 2.89593 26.0454 4.0905 26.0454H21.9095V43.9048C21.9095 45.0023 22.8054 46 23.999 46C25.095 46 26.0905 45.102 26.0905 43.9048V26.0454H43.9085C45.0045 26.0454 46 25.1474 46 23.9501C45.8009 22.8526 44.904 21.8549 43.7104 21.8549C43.7104 21.8549 43.81 21.8549 43.7104 21.8549Z"></path>
+                                                                    </svg>
+                                                                </div>
+                                                            </button>
+                                                        </div>
+                                                        <button class="solidButton_Bt removeButton_Bt fnt-p1" color="white" value="e85811d7-7aae-4f1e-aba8-bab1107c2932">
+                                                            <span>삭제</span>
+                                                        </button>
+                                                    </div>
+                                                </section>
+                                                <ul class="item-Option"><li>이게 상품이야 이게 블락이야?</li>
+                                                </ul>
+                                            </li>
+                                        <li style="display: none;" >
+                                            <section>
+                                                <div class="itemInfoWrap">
+                                                    <div type="l2" class="itemDescription">이게 상품이야</div>
+                                                    <button type="button" value="1" class="toggleItemListButton">
+                                                        <p type="p4" color="#6D6D6D" class="Text-sc-1cqgvse-0 cVwjbN">주관식 옵션</p>
+                                                        <i>
+                                                            <div name="arrow1-down" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M45.4003 15.1217L23.9125 36L2.5247 15.1217C1.8251 14.4225 1.8251 13.2237 2.5247 12.5245C3.2243 11.8252 4.42362 11.8252 5.22317 12.5245L23.9125 30.8054L42.7019 12.5245C43.4015 11.8252 44.6008 11.8252 45.4003 12.5245C45.8001 12.8241 46 13.3236 46 13.8231C45.9001 14.3226 45.7002 14.8221 45.4003 15.1217Z">
+                                                                        
+                                                                    </path>
+                                                                </svg>
+                                                            </div>
+                                                        </i>
+                                                    </button>
+                                                </div>
+                                                <div>
+                                                    <div class="stepperWrapper">
+                                                        <button type="button" class="downButton" disabled="disabled">
+                                                            <div name="minus" class="iconSVG">
+                                                                <svg viewBox="0 0 48 48">
+                                                                <path d="M6 24.1C6 22.9402 6.9402 22 8.1 22H39.9C41.0598 22 42 22.9402 42 24.1C42 25.2598 41.0598 26.2 39.9 26.2H8.1C6.9402 26.2 6 25.2598 6 24.1Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </button>
+                                                    <input type="number" value="1" class="test">
+                                                    <button type="button" class="upButton">
+                                                        <div name="plus" class="iconSVG">
                                                                     <svg viewBox="0 0 48 48">
                                                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M43.7104 21.8549H25.99V4.09524C25.99 2.89796 24.9945 2 23.9005 2C22.8054 2 21.81 2.89796 21.81 4.09524V21.9546H4.0905C2.89593 21.8549 2 22.8526 2 23.9501C2 25.0476 2.89593 26.0454 4.0905 26.0454H21.9095V43.9048C21.9095 45.0023 22.8054 46 23.999 46C25.095 46 26.0905 45.102 26.0905 43.9048V26.0454H43.9085C45.0045 26.0454 46 25.1474 46 23.9501C45.8009 22.8526 44.904 21.8549 43.7104 21.8549C43.7104 21.8549 43.81 21.8549 43.7104 21.8549Z"></path>
                                                                     </svg>
@@ -466,9 +526,9 @@
                                                 얼리버드, 리미티드 에디션 등 선물에 대한 설명을 입력해주세요.</div>
                                         </div>
                                         <div class="lengthCheckWrap lengthCheckWrap">
-                                            <div class="checkInput">
+                                            <div class="checkInput checkBorder">
                                                 <span class="lengthCheckStyle inputStyle">
-                                                    <input type="text" inputmode="text" placeholder="선물세트 A, 배송비 포함" autocomplete="off" autocapitalize="off" class="innerInput" value="">
+                                                    <input type="text" inputmode="text" placeholder="선물세트 A, 배송비 포함" autocomplete="off" autocapitalize="off" class="innerInput countCheck" maxlength="50" value="">
                                                 </span>
                                                     </div>
                                             <div class="noticeArea ">
@@ -693,7 +753,7 @@
                                         <div class="lengthCheckWrap">
                                             <div class="checkInput">
                                                 <span class="conutInput inputStyle">
-                                                    <input type="text" inputmode="numeric" placeholder="1000원 이상의 금액을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput" value=""> 
+                                                    <input type="text" inputmode="numeric" placeholder="1000원 이상의 금액을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput inputMinPrice" value="" onKeyup="this.value=this.value.replace(/[^0-9]/g,'',/<1000/)";> 
                                                     <div class="moneyInput">원</div>
                                                 </span>
                                             </div>
@@ -770,15 +830,29 @@
     const $selectionWrapper = $('.selectionWrapper');
     const $selectionOp = $('.selectionOp');
     
+    const removeBt = $('.removeButton_Bt');
+    const item = $('.selectItem>li');
+
     $selectionWrapper.click(function(){
         $selectionOp.css('display', 'block');
         // $selectionOp.slideDown(700);
+      
 
         $('.choiceButton').on('click',()=>{
+          
              console.log("들어오냐?")
             // $selectionOp.css(('display', 'none'));
             $selectionOp.slideUp(400);
-})
+            
+
+            $("input[type='checkbox']").each((i,e)=>{
+                if($(e).is(':checked')){
+                    item.eq(i).css('display', 'block');
+                }
+    })
+
+            })
+            
     });
     const $checkBoxWrapper = $('li .checkBoxWrapper');
     
@@ -791,57 +865,42 @@
             else {
                 $('.change').eq(i).css('visibility', 'hidden');
             }
-
-            
-             
- 
                     
         })
     }
-
-    // $(e).eq(i).on("change",()=>{
-    //         let number = parseInt($('.footer p b').text());
-    //         let result =0;
-            
-
-    //             if($(e).eq(i).is(":checked")){
-                    
-                    // result = ++(number);
-                    // console.log($(this).eq(i));
-                    // $('.footer p b').text(++number)
-                    // $('.footer p b').text(++result)
-                // }else{
-                //     result = --(number); 
-                    // $('.footer p b').text(--number)
-                    // $('.footer p b').text(--result)
-                // }
-                // $('.footer p b').text(result)
-                
-                //$wrapperInputs.on("blur", function () {
-                // let i = $wrapperInputs.index($(this));
-                // let value = $(this).val();
-
-                    
-                 
-            //  })
-
-                        //  $(e).eq(i).on("change",()=>{
-            //         let number = $('.footer p b').text();
-            //         if(!($(e).eq(i).is(":checked"))){
-            //             $('.footer p b').text(--(parseInt(number)))
-            //         }
-                    
-            //  })
-                // if($(e).eq(i).is(":checked") == true){
-                //     let text = 0;
-                //     $('.footer p b').text(++text)
-                // }
+    
 
 
+    console.log($('.upButton'));
+    const $upBt = $('.upButton');
+    const $downpBt = $('.downButton');
+    const $count = $("input[type='number']");
+    $upBt.each((i,e)=>{
+        $upBt.eq(i).on('click', ()=>{
+            $count.eq(i).val(parseInt($count.eq(i).val()) + 1); 
+            $downpBt.eq(i).attr('disabled', false);
+        })
+    })
+    $downpBt.each((i,e)=>{
+        $downpBt.eq(i).on('click',()=>{
+            if($count.eq(i).val()=="1"){
+                $downpBt.eq(i).attr('disabled', true);
+            }else{
+                $count.eq(i).val(parseInt($count.eq(i).val()) - 1); 
+            }
+        })
+    })
 
-                // .changeSpan, .checkBoxSpan
+    console.log(item)
+    removeBt.each((i,e)=>{
+        removeBt.eq(i).on('click', ()=>{
+            console.log(removeBt.eq(i))
+            console.log(item.eq(i))
+            item.eq(i).css('display', 'none');
+        })
+    })
 
-    // console.log($('.selectItem li'));
+
 
 
     $(".selectCard").on('click', function(){
@@ -864,7 +923,41 @@
         })
 
     })
-    
+
+    const $remove = $('.removeButton');
+    $remove.each((i,e)=>{
+        
+        $(e).on('click', ()=>{
+            $('.previewItem').eq(i+1).css('display', 'none');
+        })
+    })
+   
+const $countCheck = $('.countCheck');
+const $checkLength = $('.checkLength');
+const $checkDiv = $('.checkBorder')
+
+$countCheck.keyup((e) =>{
+    let $content = $countCheck.val();
+    if($content.length == 0 || $content ==''){
+        $checkLength.text('0/50');
+    }else{
+        $checkLength.text($content.length + '/50');
+
+    }
+    if($content){
+        $checkDiv.css('border', '1px solid rgb(240, 240, 240');
+        $checkLength.css('color', 'rgba(0, 0, 0, 0.87)');
+    }else{
+        $checkDiv.css('border', '1px solid rgb(244, 69, 68)');
+        $checkLength.css('color', 'rgb(244, 69, 68)');
+    }
+})
+
+const $lineButton = $('.lineButton');
+$lineButton.on('click', function(){
+    $('.selectItem').css('display', 'none');
+
+})
     
 </script>
 <script src="../../static/js/funding/funding-gift.js"></script>
