--- a/src/main/resources/templates/funding/funding-plan.html
+++ b/src/main/resources/templates/funding/funding-plan.html
@@ -24,8 +24,14 @@
     width: 100%;
     height: 2px;
     background: rgb(248, 100, 83);
-    
-}
+    }
+    .startDate, .endDate {
+        width:50%;
+    }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    }
 </style>
 <body>
     <div id="view" class="view">
@@ -76,7 +82,7 @@
                                 <div class="guideCheckWrapper">
                                     <div class="guideWrapper inputWrapper">
                                         <span class="inputSpan2 inputSpan">
-                                            <input type="text" inputmode="numeric" placeholder="50만원 이상의 금액을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput targetAmount" value="">원</span>
+                                            <input type="number" inputmode="numeric" placeholder="50만원 이상의 금액을 입력해주세요" autocomplete="off" autocapitalize="off" class="innerInput targetAmount" value="">원</span>
                                     </div>
                                     <div class="noticeArea noticeArea">
                                         <p class="guideArea guidearea"></p>
@@ -87,9 +93,9 @@
                                         <span>목표 금액 달성 시 예상 수령액</span>
                                          <em class="receipt">0원</em>
                                     </div>
-                                    <div class="feeWrap">총 수수료
+                                    <!-- <div class="feeWrap">총 수수료
                                         <em class="feeAmount">0원</em>
-                                    </div>
+                                    </div> -->
                                     <div class="fee">결제대행 수수료 (총 결제액의 3% + VAT)<em>0원</em></div>
                                     </div>
                                 </div>
@@ -119,7 +125,7 @@
                                                 <div class="editorDate">
                                                     <div class="datapickerwrap">
                                                         <div class="datapickercontain">
-                                                            <button type="button" class="editorInput customInput example-custom-input">
+                                                            <input type="date" class="editorInput customInput example-custom-input startDate">
                                                                 <div name="calendar-dot" class="icon-svg">
                                                                     <svg viewBox="0 0 48 48">
                                                                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -127,7 +133,7 @@
                                                                         </path>
                                                                     </svg>
                                                                 </div>시작 날짜를 선택해주세요
-                                                            </button>
+                                                            </input>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -135,7 +141,8 @@
                                             
                                         </div>
                                         <div class="FundingPlan__FundingTerm-sc-1f9ovdu-3 fundingTerm cFBWEo">
-                                            <p class="formTitle">펀딩 기간</p>최대 60일
+                                            <p class="formTitle betweenDate">펀딩 기간</p>최대 60일
+                                            <input type="hidden" class="hiddenInput">
                                         </div>
                                     </li>
                                     <li class="planItem">
@@ -175,7 +182,7 @@
                                         <div class="editorDate">
                                             <div class="datapickerwrap">
                                                 <div class="datapickercontain">
-                                                    <button type="button" class="customInput example-custom-input">
+                                                    <input type="date" class="customInput example-custom-input endDate">
                                                         <div name="calendar-dot" class="icon-svg">
                                                             <svg viewBox="0 0 48 48">
                                                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -183,7 +190,7 @@
                                                                 </path>
                                                             </svg>
                                                         </div>종료 날짜를 선택해주세요
-                                                    </button>
+                                                    </input>
                                                 </div>
                                             </div>
                                         </div>
@@ -290,6 +297,23 @@
         $receipt.val() = $targetAmount - $feeAmount;
         }
     );
+
+    // 날짜계산(아직 안됨)
+    // const $betweenDate = $('.betweenDate');
+    // const endDate = $('.endDate')
+    // const startDate = $('.startDate')
+
+    
+    // console.log(endDate.val());
+    // console.log(startDate.val());
+    // $('.hiddenInput').on('change', function(){
+    //     if($endDate.val() && $startDate.val())
+    // })
+
+    $('.targetAmount').on('change',function(){
+       $('.fee em').html($(this).val()*0.033 + "원"); 
+       $('.TotalAmount em').html($(this).val() - $(this).val()*0.033 + "원") ;
+    })
 
 
 </script>
