메인, 헤더 심봉사에 맞게 수정

--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -404,7 +404,7 @@ let infoCheckAll = [true, false, true, false];
 
 console.log($infoInputs);
 
-$infoInputs.on('blur', function () {
+$infoInputs.on('mouseover', function () {
     let i = $infoInputs.index($(this));
     let value = $(this).val();
 
