--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -82,7 +82,10 @@
                             </div>
                         </div>
                         <div class="main-first-wrapper sbs">
-                            <div class="main-first-list-title">봉사 추천</div>
+                            <div class="main-first-list-title">
+                                봉사 추천
+                                <a class="total-funding-link" href="#" title="전체보기">전체보기</a>
+                            </div>
                             <div class="main-first-list-wrapper">
                                 <div class="main-first-list-layout">
 
