--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/main/footer.css">
+    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/static/css/main/footer.css">
 </head>
 <body>
     <div class="full-screen">
-        <footer class="footer-wrapper">
+        <footer id="main-footer" th:fragment="mainFooter" class="footer-wrapper">
             <div class="footer-link-wrapper">
                 <div class="footer-site-map-wrapper">
                     <div class="footer-site-map">
