--- a/src/main/resources/templates/join-login/join-select.html
+++ b/src/main/resources/templates/join-login/join-select.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입 페이지</title>
-    <link rel="stylesheet" href="../../static/css/join-login/select-page.css">
+    <link rel="stylesheet" href="/css/join-login/select-page.css">
 </head>
 <body>
     <div class="all-wrap">
@@ -14,7 +14,7 @@
                 <div class="login-header-text">
                     <a href="" class="header-logo">
                         <div class="header-text">
-                            <img src="../../static/image/logo-test.png" style="width: 100%;">
+                            <img src="/image/logo-test.png" style="width: 100%;">
                         </div>
                     </a>
                 </div>
