--- a/src/main/resources/templates/community/free-board.html
+++ b/src/main/resources/templates/community/free-board.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 자유게시판</title>
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/community/review-board.css">
-    <link rel="stylesheet" href="../../static/css/community/free-board.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/community/review-board.css">
+    <link rel="stylesheet" href="/css/community/free-board.css">
 </head>
 <body class="body">
     <!-- 헤더 -->
-    <header id="_header"></header>
+    <header th:insert="~{main/header.html :: mainHeader}"></header>
 
     <!-- 전체 div -->
     <div style="min-height: 100%;">
@@ -398,17 +398,12 @@
             </div>
         </main>
     </div>
-
+    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 
     <!-- 푸터 -->
     <!-- <footer id="_footer"></footer> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
-<script src="../../static/js/community/free-board.js"></script>
+<script src="/js/main/header.js"></script>
+<script src="/js/community/free-board.js"></script>
 </html>
