--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>자유게시판 작성하기</title>
-    <link rel="stylesheet" href="../../static/css/community/free-create.css">
-    <link rel="stylesheet" href="../../static/js/community/free-create.js">
-    <link rel="stylesheet" href="../../static/css/font/font.css">
+    <link rel="stylesheet" href="/css/community/free-create.css">
+    <link rel="stylesheet" href="/js/community/free-create.js">
+    <link rel="stylesheet" href="/css/font/font.css">
 </head>
 <body>
     <!-- 헤더 -->
-    <header id="_header"></header>
+    <header th:insert="~{main/header.html :: mainHeader}"></header>
     <!-- 전체 div -->
     <div class="board">
         <section class="board-container">
@@ -74,15 +74,10 @@
     
 
     <!-- 푸터 임시 -->
-    <footer id="_footer"></footer>
+    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
     
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
-<script src="../../static/js/community/free-create.js"></script>
+<script src="/js/main/header.js"></script>
+<script src="/js/community/free-create.js"></script>
 </html>
