--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 자유게시판 상세페이지</title>
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/community/free-detail.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/community/free-detail.css">
 </head>
 <body>
     <!-- 헤더 -->
-    <header id="_header"></header>
+    <header th:insert="~{main/header.html :: mainHeader}"></header>
 
      <!-- 전체 div -->
      <div>
@@ -444,6 +444,8 @@
             </footer>
         </div>
     </div>
+
+    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
      <!--  -->
      <!-- 댓글 삭제 모달창 -->
      <div>
@@ -463,11 +465,6 @@
      </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="../../static/js/community/free-detail.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
+<script src="/js/main/header.js"></script>
+<script src="/js/community/free-detail.js"></script>
 </html>
