--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이메일로 로그인</title>
-    <link rel="stylesheet" href="../../static/css/join-login/email-login.css">
+    <link rel="stylesheet" href="/css/join-login/email-login.css">
 </head>
 <body>
     <div class="wrap">
@@ -13,7 +13,7 @@
             <div class="login-header-text">
                 <a href="" class="header-logo">
                     <div class="header-text">
-                        <img src="../../static/image/logo-test.png" style="width: 100%;">
+                        <img src="/image/logo-test.png" style="width: 100%;">
                     </div>
                 </a>
             </div>
@@ -81,5 +81,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/join-login/email-login.js"></script>
+<script src="/js/join-login/email-login.js"></script>
 </html>
