--- a/src/main/resources/templates/mypage/withdraw-check.html
+++ b/src/main/resources/templates/mypage/withdraw-check.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원탈퇴 확인</title>
-    <link rel="stylesheet" href="../../static/css/font/font.css">
-    <link rel="stylesheet" href="../../static/css/main/header.css">
-    <link rel="stylesheet" href="../../static/css/mypage/withdraw-check.css">
-    <link rel="stylesheet" href="../../static/css/main/footer.css">
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/mypage/withdraw-check.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 <body>
     <div class="full-screen">
 
         <!-- 헤더 임시 -->
-        <header id="_header"></header>
+        <header th:insert="~{main/header.html :: mainHeader}"></header>
 
         <div class="withdraw-explain-wrap">
             <div class="withdraw-header-wrap">
@@ -92,17 +92,12 @@
 
 
         <!-- 푸터 임시 -->
-        <footer id="_footer"></footer>
+        <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
+<script src="/js/main/header.js"></script>
 <script>
     // 탈퇴 유의사항 확인을 누르면 체크박스 체크 혹은 해제
     $('.withdraw-check-label').on('click', () => {
