--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/static/css/main/header.css">
-    <link rel="stylesheet" href="/static/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/font/font.css">
 </head>
 <body>
-    <!-- <!-- 로그인시 -->
+    <!-- 로그인시 -->
     <div class="full-screen">
         <header id="main-header" th:fragment="mainHeader" class="header-layout">
             <div class="header-wrapper">
@@ -261,5 +261,5 @@
     
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="/static/js/main/header.js"></script>
+<script src="/js/main/header.js"></script>
 </html>
