--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>심봉사</title>
-    <link rel="stylesheet" href="/static/css/main/main.css" />
-    <link rel="stylesheet" href="/static/css/font/font.css">
-    <link rel="stylesheet" href="/static/css/main/header.css">
-    <link rel="stylesheet" href="/static/css/main/footer.css">
+    <link rel="stylesheet" href="/css/main/main.css" />
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 <body>
     <div class="full-screen">
@@ -1352,9 +1352,9 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="/static/js/main/banner.js"></script>
-<script src="/static/js/main/main.js"></script>
-<script src="/static/js/main/header.js"></script>
+<script src="/js/main/banner.js"></script>
+<script src="/js/main/main.js"></script>
+<script src="/js/main/header.js"></script>
 <script type="text/javascript">
 /*    $(document).ready(function () {
         $('#_header').load('../main/header.html');
