--- a/src/main/resources/templates/welfare-center/welfare-center-search.html
+++ b/src/main/resources/templates/welfare-center/welfare-center-search.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>복지센터현황</title>
-    <link rel="stylesheet" href="../../static/css/welfare-center/welfare-center-search.css" />
-    <link rel="stylesheet" href="../../static/css/font/font.css">
+    <link rel="stylesheet" href="/css/welfare-center/welfare-center-search.css" />
+    <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
 </head>
 <body>
-    <header id="_header"></header>
+    <header th:insert="~{main/header.html :: mainHeader}"></header>
     <div id="container">
         <div class="layout content-layout">
             <div class="content-wrapper">
@@ -1019,13 +1021,8 @@
             </div>
         </div>
     </div>
-    <footer id="_footer"></footer>
+    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#_header').load('../main/header.html');
-        $('#_footer').load('../main/footer.html');
-    });
-</script>
+<script src="/js/main/header.js"></script>
 </html>
