--- a/src/main/resources/templates/service-info/service-info.html
+++ b/src/main/resources/templates/service-info/service-info.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../static/css/service-info/service-info.css">
+    <link rel="stylesheet" href="/css/service-info/service-info.css">
 </head>
 <body>
     <div class="full-screen">
@@ -21,7 +21,7 @@
                 <div class="swiper-slide seventh-image" style="height: 937px; position: relative;">
                     <div class="bottom-content-wrap">
                         <div class="btn-wrapper">
-                            <a class="button-start" href="../../templates/main/main.html">심봉사 시작하기</a>
+                            <a class="button-start" href="/templates/main/main.html">심봉사 시작하기</a>
                         </div>
                     </div>
                 </div>
@@ -31,5 +31,5 @@
     
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="../../static/js/service-info/serviceInfo.js"></script>
+<script src="/js/service-info/serviceInfo.js"></script>
 </html>
